Es 0.9beta to xs 1.1
--------------------

Some c++ features are used in the code-base now,
so it is no longer valid C (and obviously needs
a c++ compiler)

The assignment operator must be delimited by whitespace in order to
distinguish this usage from "long" arguments (--foo=blah).

Closures in child shells should operate the same as they did
in their parents - if f and g share x, changing x in f changes
x in g, which previously did not work. The implementation operates
by adding an __id__ definition before variables in each closure.

The build system has been rather improved - automake is used instead of 
a manually written Makefile.in, and the autoconf files updated to operate
with the latest version of autoconf. There are a few new --enable options.

Some simple new functions have been added - map, omap, until, switch.

The modulus operator (%) may be used in math expressions. This is
implemented by std::fmod.

Added infix relational operators :lt, :le, :gt, :ge, :eq and :ne.
These all use the new comparison function %cmp, which in turn uses
the primitive comparison function &cmp.

Added a builtin printf, compiled when libffi is available. This
is implemented by the primitive &printf.

Added Unicode escapes \uxxxx and \Uxxxxxxxx.

Corrected the behaviors of pushd and popd. Added dirs to display
directory stack.

Added a rudimentary jobs command.

Added a history command.

On platforms that provide a sigsetjmp() library call, the first
SIGINT caused all subsequent SIGINTs to be blocked. This broke the
ability to cancel an unfinished command line using ^C. Worse, all
forked programs inherited the SIGINT block. This is now fixed.

When built with readline, xs would exit on SIGQUIT (^\) because the
signal caused xs to behave as-if readline() had received an EOF.
This is now fixed.

Readline now has tab-complete for functions, variables, binaries in path
and (when written with a ./ prefix) files in the working directory.
